grafana/ingressroute.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: grafana
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`grafana.claytonc.dev`)
      kind: Rule
#      middlewares: 
#        - name: whitelist
      services:
      - name: grafana
        port: 80
  #    middlewares:
  #      - name: auth
  # Use the secret generated by cert-manager
  tls:
    secretName: grafana-tls
